--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,13 @@ services:
     image: redis:4.0.1
     ports:
       - "6379:6379"
+  myDb:
+    container_name: "myDb"
+    build: ./build/docker/db/
+    environment: 
+      MYSQL_USER: "db_user"
+      MYSQL_PASSWORD: "db_user"
+      MYSQL_ROOT_PASSWORD: "db_user"
+      MYSQL_DATABASE: "myDb"
+    ports:
+      - "3306:3307"
