--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "release-major": "standard-version --release-as major"
   },
   "keywords": [],
-  "author": "Sayyo Games Inc.",
+  "author": "jason",
   "license": "ISC",
   "devDependencies": {
     "chai": "4.1.1",
