--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "apollo-server-koa": "^2.3.3",
     "aws-sdk": "^2.396.0",
+    "bookshelf": "^0.14.2",
     "convert-svg-to-jpeg": "^0.4.0",
     "fb": "^2.0.0",
     "generate-password": "^1.4.1",
     "graphql": "^14.1.1",
+    "graphql-bookshelf": "^1.0.0",
     "hashring": "^3.2.0",
     "ioredis": "^4.0.2",
     "joi": "^14.0.2",
